increase location content size, handle links, and fix text alignment

--- a/static/scpc/scss/modules/_content.scss
+++ b/static/scpc/scss/modules/_content.scss
@@ -1,13 +1,23 @@
 
 /* Links */
 
-.external-link {
-  text-transform: uppercase;
+@mixin inline-link {
   color: $color-hl-dark;
 
   &:hover {
     color: $color-hl-dark;
   }
+}
+
+.rich-text a {
+  @include inline-link;
+}
+
+
+.external-link {
+  @include inline-link;
+
+  text-transform: uppercase;
 }
 
 .external-link--footer {
